# Servidor_Imagenes_SO

./: .gitignore  CMakeLists.txt  FIFO_server.c  FIFO_server.h  FORK_server.c  FORK_server.h  README.md  cliente_multihilo.c  log_utils.c  log_utils.h  main.c  thread_server.c  thread_server.h
archivos/: Prueba.txt  transcripcion-1744177921.json
